# ArgosAISecurity

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: argos.example.toml
crates/argos-agent/: Cargo.toml
crates/argos-agent/src/: main.rs  reporter.rs
crates/argos-brain/: Cargo.toml
crates/argos-brain/src/: lib.rs
crates/argos-central/: Cargo.toml
crates/argos-central/src/: dashboard.html  main.rs
crates/argos-cli/: Cargo.toml
crates/argos-cli/src/: main.rs
crates/argos-common/: Cargo.toml
crates/argos-common/src/: config.rs  event.rs  lib.rs
crates/argos-detect/: Cargo.toml
crates/argos-detect/src/: entropy.rs  lib.rs  scorer.rs
crates/argos-policy/: Cargo.toml
crates/argos-policy/src/: lib.rs
crates/argos-recovery/: Cargo.toml
crates/argos-recovery/src/: lib.rs
crates/argos-response/: Cargo.toml
crates/argos-response/src/: isolate.rs  lib.rs
crates/argos-sensor/: Cargo.toml
crates/argos-sensor/src/: fanotify.rs  lib.rs  procmon.rs
crates/argos-storage/: Cargo.toml
crates/argos-storage/src/: lib.rs
docs/: ARCHITECTURE.md  FEATURE_AI.md  FEATURE_DETECTION.md  FEATURE_POLICY.md  FEATURE_RECOVERY.md  FEATURE_RESPONSE.md  REQUIREMENTS.md  ROLE_ADMINISTRATOR.md  ROLE_ANALYST.md  ROLE_OPERATOR.md  SERVICE_AGENT.md  SERVICE_CENTRAL.md  SERVICE_CLI.md  SOURCE_CODE_ANALYSIS.md
packaging/: argos-agent.service
scripts/: smoke-test.sh
