[package]
name = "argos-central"
version.workspace = true
edition.workspace = true

[[bin]]
name = "argos-central"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argos-common.workspace = true
