[package]
name = "argos-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "argos"
path = "src/main.rs"

[dependencies]
argos-common.workspace = true
argos-storage.workspace = true
argos-detect.workspace = true
argos-recovery.workspace = true
argos-brain.workspace = true
argos-policy.workspace = true
argos-response.workspace = true
clap.workspace = true
