[package]
name = "argos-policy"
version.workspace = true
edition.workspace = true

[dependencies]
argos-common.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
hex.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
